@@ -1,6 +1,9 @@
 {{$NEXT}}
 
-- Document $reader->enterprise()
+- The following new anonymizer outputs were added to GeoIP2::Record::Traits
+  for use with GeoIP2 Precision Insights: 'is_anonymous', 'is_anonymous_vpn',
+  'is_hosting_provider', 'is_public_proxy', and 'is_tor_exit_node'.
+- Documented $reader->enterprise()
 - Updated usage of Data::Validate::IP so that we don't do separate IPv4 and
   IPv6 checks. This provides a very small performance gain.
 
